--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@firebase/auth": "^1.7.0",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@types/react": "~18.2.45",
     "expo": "~50.0.14",
     "expo-status-bar": "~1.11.1",
+    "expo-web-browser": "~12.8.2",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "typescript": "^5.3.0",
-    "@types/react": "~18.2.45",
-    "expo-web-browser": "~12.8.2"
+    "react-native-linear-gradient": "^2.8.3",
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
