--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
+    "firebase": "^10.11.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
