--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@native-base/expo-template": "^1.2.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
+    "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
     "expo": "~50.0.14",
     "expo-linear-gradient": "~12.7.2",
@@ -24,7 +25,8 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-linear-gradient": "^2.8.3",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "react-native-gesture-handler": "~2.14.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
