--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/clerk-expo": "^0.20.16",
     "@firebase/auth": "^1.7.0",
     "@native-base/expo-template": "^1.2.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -24,9 +25,10 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-drop-shadow": "^1.0.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
-    "typescript": "^5.3.0",
-    "react-native-gesture-handler": "~2.14.0"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
