--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@clerk/clerk-expo": "^0.20.16",
     "@firebase/auth": "^1.7.0",
     "@native-base/expo-template": "^1.2.1",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -29,11 +30,12 @@
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "^3.8.1",
+    "react-native-reanimated": "~3.6.2",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "metro": "^0.80.8",
     "tailwindcss": "^3.3.2"
   },
   "private": true
