--- a/package.json
+++ b/package.json
@@ -15,30 +15,37 @@
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/material-top-tabs": "^6.6.13",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
-    "expo": "~50.0.14",
+    "expo": "^50.0.17",
+    "expo-application": "^5.8.4",
     "expo-linear-gradient": "~12.7.2",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
+    "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
+    "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
     "react-native-tab-view": "^3.5.2",
+    "react-native-vector-icons": "^10.0.3",
+    "react-navigation": "^5.0.0",
+    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "metro": "^0.80.8",
-    "tailwindcss": "^3.3.2"
+    "metro": "^0.80.8"
   },
   "private": true
 }
