--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["firestore", "Ionicons", "Pressable", "signin"]
+  "cSpell.words": ["firestore", "gorhom", "Ionicons", "Pressable", "signin"]
 }
