--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.16",
     "@firebase/auth": "^1.7.0",
+    "@gorhom/bottom-sheet": "4",
     "@native-base/expo-template": "^1.2.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
@@ -22,7 +23,10 @@
     "@types/react": "~18.2.45",
     "expo": "^50.0.17",
     "expo-application": "^5.8.4",
+    "expo-auth-session": "~5.4.0",
+    "expo-crypto": "~12.8.1",
     "expo-linear-gradient": "~12.7.2",
+    "expo-random": "~13.6.0",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
@@ -40,12 +44,12 @@
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
-    "tailwindcss": "^3.3.2",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "metro": "^0.80.8"
+    "metro": "^0.80.8",
+    "tailwindcss": "^3.3.2"
   },
   "private": true
 }
