Lọc kết quả tìm kiếm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["firestore", "gorhom", "Ionicons", "Pressable", "signin"]
+  "cSpell.words": [
+    "devvie",
+    "firestore",
+    "gorhom",
+    "Ionicons",
+    "Pressable",
+    "signin"
+  ]
 }
