--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.16",
+    "@devvie/bottom-sheet": "^0.3.0",
     "@firebase/auth": "^1.7.0",
     "@gorhom/bottom-sheet": "4",
     "@native-base/expo-template": "^1.2.1",
@@ -36,6 +37,7 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-drop-shadow": "^1.0.0",
+    "react-native-element-dropdown": "^2.10.4",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal": "^13.0.1",
