--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/clerk-expo": "^0.20.16",
     "@devvie/bottom-sheet": "^0.3.0",
+    "@dimaportenko/react-native-shadow-view": "^0.1.4",
     "@firebase/auth": "^1.7.0",
     "@gorhom/bottom-sheet": "4",
     "@native-base/expo-template": "^1.2.1",
@@ -44,6 +45,7 @@
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
     "react-native-reanimated": "~3.6.2",
+    "react-native-shadow-cards": "^1.0.2",
     "react-native-tab-view": "^3.5.2",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
