--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-native-reanimated": "~3.6.2",
     "react-native-shadow-cards": "^1.0.2",
     "react-native-tab-view": "^3.5.2",
+    "react-native-toast-message": "^2.2.0",
     "react-native-vector-icons": "^10.0.3",
     "react-navigation": "^5.0.0",
     "typescript": "^5.3.0"
