--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@native-base/expo-template": "^1.2.1",
     "@react-native-async-storage/async-storage": "1.21.0",
     "@react-native-google-signin/google-signin": "^11.0.1",
+    "@react-native-picker/picker": "^2.7.5",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/material-bottom-tabs": "^6.2.28",
     "@react-navigation/material-top-tabs": "^6.6.13",
@@ -27,11 +28,13 @@
     "expo-application": "^5.8.4",
     "expo-auth-session": "~5.4.0",
     "expo-crypto": "~12.8.1",
+    "expo-image-picker": "~14.7.1",
     "expo-linear-gradient": "~12.7.2",
     "expo-random": "~13.6.0",
     "expo-status-bar": "~1.11.1",
     "expo-web-browser": "~12.8.2",
     "firebase": "^10.11.0",
+    "formik": "^2.4.6",
     "native-base": "^3.4.28",
     "nativewind": "^2.0.11",
     "postcss": "^8.4.23",
