--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "@types/react": "~18.2.45",
+    "axios": "^1.7.1",
     "expo": "^50.0.17",
     "expo-application": "^5.8.4",
     "expo-auth-session": "~5.4.0",
@@ -41,6 +42,7 @@
     "postcss": "^8.4.23",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-document-picker": "^9.2.0",
     "react-native-drop-shadow": "^1.0.0",
     "react-native-element-dropdown": "^2.10.4",
     "react-native-elements": "^3.4.3",
