--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-mail": "^6.1.1",
     "react-native-modal": "^13.0.1",
     "react-native-pager-view": "6.2.3",
     "react-native-paper": "^5.12.3",
